--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,26 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+    margin-top: 100px;
+}
+ul {
+    padding: 0;
+}
+ul li {
+    border: 1px solid grey ;
+    list-style: none ;
+    padding: 5px ;
+    text-align: start;
+}
+h1 { 
+    text-align: center;
+}
+input {
+    border: none;
+    width: 100%;
+}
+
+i {
+    text-align: end;
+}
