--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,35 +1,62 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
 body {
     margin-top: 100px;
 }
+
+.background {
+    background-color: gray;
+}
+  
+  .container {
+    border: 1px solid grey;
+    border-radius: 5px;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+}
+  
 ul {
-    padding: 0;
+    padding: 0px;
+    border: 1px solid gray;
 }
+  
 ul li {
-    border: 1px solid grey ;
-    list-style: none ;
-    padding: 5px ;
-    text-align: start;
-}
-h1 { 
+    border: 5px solid black;
+    list-style: none;
+    padding: 5px;
     text-align: center;
 }
-input {
-    border: none;
-    width: 100%;
+  
+h1 {
+    text-align: center;
+    font-family: arial black, sans-serif;
 }
-
+  
+input {
+    border:2cm;
+    width: 100%;
+    text-align: center;
+}
+  
 i {
     text-align: end;
 }
+  
+.todosLeft {
+text-align: center;
+}
+
+
+.list-group-item {
+    position: relative;
+}
+  
+.list-group-item i {
+    visibility: hidden;
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+}
+  
+.list-group-item:hover i {
+    visibility: visible;
+}
+  
